crates/vmt-parser/tests/snapshots/parse__tests__data__patch.vmt.snap
---
source: tests/parse.rs
expression: result
---
{
  "patch": {
    "include": "tests/data/concretefloor003.vmt",
    "replace": {
      "$ssbump": "0"
    }
  }
}
