crates/vmt-parser/tests/snapshots/parse__tests__data__shot2_subrect.vmt.snap
---
source: tests/parse.rs
expression: result
---
{
  "subrect": {
    "$material": "decals/decals_mod2x",
    "$pos": [
      64.0,
      0.0
    ],
    "$size": [
      64.0,
      64.0
    ]
  }
}
