crates/vmt-parser/tests/snapshots/parse__tests__data__water_murky.vmt.snap
---
source: tests/parse.rs
expression: result
---
{
  "water": {
    "$basetexture": "swamp/water/water_murky",
    "$abovewater": true,
    "$bottommaterial": "swamp/water/water_murky_beneath.vmt",
    "$underwaterover": null,
    "$bumpmap": null,
    "$normalmap": "water/tfwater001_normal",
    "$dudvframe": 0,
    "$bumpframe": 0,
    "$bumptransform": "center 0.5 0.5 scale 1 1 rotate 0 translate 0 0",
    "$flashlighttint": 1.0,
    "$fogenable": true,
    "$fogcolor": [
      35.0,
      32.0,
      20.0
    ],
    "$fogstart": 0.0,
    "$fogend": 170.0,
    "$lightmapwaterfog": false
  }
}
